# LSPlant

./: build.gradle.kts  settings.gradle.kts
lsp_api/: build.gradle.kts
lsp_api/src/main/java/org/lsposed/lsplant/: LSPlantHooker.java
lsp_api/src/main/jni/: CMakeLists.txt  lsp_main.cpp
myapplication/: build.gradle.kts
myapplication/src/main/: AndroidManifest.xml
myapplication/src/main/java/com/jj/myapplication/: A.java  B.java  MainActivity.java
myapplication/src/main/res/layout/: main.xml
test/: build.gradle.kts
test/src/main/java/org/lsposed/lsplant/: LSPlantHooker.java
test/src/main/jni/: CMakeLists.txt
